--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       content="script-src 'self' 'unsafe-inline';"
     />
     <title>music dhoom</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
